commit 12